--- a/src/components/Home/Work/Work.scss
+++ b/src/components/Home/Work/Work.scss
@@ -6,10 +6,7 @@
   align-items: center;
   width: 100%;
   height: 700px;
-  margin-top: 60px;
-  @include sm{
-    margin-top: 120px;
-  }
+  margin-top: 120px;
   padding: 0 30px;
   box-sizing: border-box;
   .line-portfolio{
@@ -58,7 +55,7 @@
     box-sizing: border-box;
     width: 100%;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 0 auto 100px;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
